added results link on detail.html

--- a/polls/templates/polls/detail.html
+++ b/polls/templates/polls/detail.html
@@ -10,3 +10,6 @@
 </fieldset>
 <input type="submit" value="Vote">
 </form>
+<div>
+    <a href="{% url 'polls:results' question.id %}" >View results</a>
+</div>
